[gd_scene load_steps=3 format=3 uid="uid://deh07y4qg8v3o"]

[ext_resource type="PackedScene" uid="uid://b78h2t3hvwijs" path="res://Scenes/background.tscn" id="1_0vjh6"]
[ext_resource type="Script" path="res://Scripts/kanji_menu.gd" id="1_hoieb"]

[node name="kanji_menu" type="Node2D"]
script = ExtResource("1_hoieb")

[node name="background" parent="." instance=ExtResource("1_0vjh6")]

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 288.0
offset_top = 114.0
offset_right = 812.0
offset_bottom = 2026.0

[node name="GridContainer2" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="directions" type="Button" parent="ScrollContainer/GridContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "directions"

[node name="weekdays" type="Button" parent="ScrollContainer/GridContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "Weekdays"

[node name="numbers" type="Button" parent="ScrollContainer/GridContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "numbers"

[node name="bodyparts" type="Button" parent="ScrollContainer/GridContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "bodyparts"

[node name="colors" type="Button" parent="ScrollContainer/GridContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "colors"

[node name="time" type="Button" parent="ScrollContainer/GridContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "time"

[node name="Level_7" type="Button" parent="ScrollContainer/GridContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "level 5"

[node name="Level_8" type="Button" parent="ScrollContainer/GridContainer2"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "level 5"

[node name="Back" type="Button" parent="."]
offset_left = 56.0
offset_top = 2160.0
offset_right = 1000.0
offset_bottom = 2336.0
theme_override_font_sizes/font_size = 85
text = "Back"

[connection signal="pressed" from="ScrollContainer/GridContainer2/directions" to="." method="_on_directions_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer2/weekdays" to="." method="_on_weekdays_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer2/numbers" to="." method="_on_numbers_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer2/bodyparts" to="." method="_on_bodyparts_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer2/colors" to="." method="_on_colors_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer2/time" to="." method="_on_time_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
